update gambar menu

--- a/index.html
+++ b/index.html
@@ -71,13 +71,19 @@
             <p class="price">Rp 15.000</p>
         </div>
         <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Cappuccino">
+            <img width="280" src="image/kopi 2.jpg" alt="Cappuccino">
             <h3 class="menu-card-tittle">Cappuccino</h3>
             <!-- <p>Perpaduan sempurna antara espresso, susu panas, dan busa susu yang lembut.</p> -->
             <p class="price">Rp 20.000</p>
         </div>
         <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Latte">
+            <img width="280" src="image/kopi 3.jpg" alt="Latte">
+            <h3 class="menu-card-tittle">Latte</h3>
+            <!-- <p>Kopi susu yang creamy</p> -->
+            <p class="price">Rp 25.000</p>
+        </div>
+                <div class="menu-card">
+            <img width="280" src="image/kopi 4.jpg" alt="Latte">
             <h3 class="menu-card-tittle">Latte</h3>
             <!-- <p>Kopi susu yang creamy</p> -->
             <p class="price">Rp 25.000</p>
@@ -89,25 +95,19 @@
             <p class="price">Rp 25.000</p>
         </div>
                 <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Latte">
+            <img width="280" src="image/kopi 2.jpg" alt="Latte">
             <h3 class="menu-card-tittle">Latte</h3>
             <!-- <p>Kopi susu yang creamy</p> -->
             <p class="price">Rp 25.000</p>
         </div>
                 <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Latte">
+            <img width="280" src="image/kopi 3.jpg" alt="Latte">
             <h3 class="menu-card-tittle">Latte</h3>
             <!-- <p>Kopi susu yang creamy</p> -->
             <p class="price">Rp 25.000</p>
         </div>
                 <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Latte">
-            <h3 class="menu-card-tittle">Latte</h3>
-            <!-- <p>Kopi susu yang creamy</p> -->
-            <p class="price">Rp 25.000</p>
-        </div>
-                <div class="menu-card">
-            <img width="280" src="image/latte.jpg" alt="Latte">
+            <img width="280" src="image/kopi 4.jpg" alt="Latte">
             <h3 class="menu-card-tittle">Latte</h3>
             <!-- <p>Kopi susu yang creamy</p> -->
             <p class="price">Rp 25.000</p>
