--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kopi Kenangan Mantan</title>
+    <title>Kopi Kenangan Senja</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -52,7 +52,7 @@
     </div>
     <div class="content">
         <h3>Kenapa memilih kopi kami</h3>
-        <p>Kopi Kenangan Mantan adalah kedai kopi yang didirikan dengan tujuan untuk memberikan pengalaman kopi yang tak terlupakan bagi setiap pelanggan kami. Kami percaya bahwa setiap cangkir kopi memiliki cerita, dan kami ingin menjadi bagian dari cerita itu.</p>
+        <p>Kopi Kenangan senja adalah kedai kopi yang didirikan dengan tujuan untuk memberikan pengalaman kopi yang tak terlupakan bagi setiap pelanggan kami. Kami percaya bahwa setiap cangkir kopi memiliki cerita, dan kami ingin menjadi bagian dari cerita itu.</p>
         <p>Kami hanya menggunakan biji kopi terbaik yang dipilih secara hati-hati dari berbagai daerah penghasil kopi di Indonesia. Setiap biji kopi dipanggang dengan teknik khusus untuk memastikan cita rasa yang kaya dan aroma yang menggoda.</p>
         <p>Selain kopi, kami juga menawarkan berbagai pilihan makanan ringan dan camilan yang sempurna untuk menemani waktu santai Anda di kedai kami.</p>
 </div>
